--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
     <!-- Give your app a swell name -->
     <title>Appy the App!</title>
+    <link rel="stylesheet" href="/style.css" />
     <script src="/bundle.js" defer></script>
   </head>
   <body>
